Fixed Content Spacing Issues

--- a/themes/equippedyouth/static/css/style.css
+++ b/themes/equippedyouth/static/css/style.css
@@ -190,6 +190,23 @@
     margin: 0px 5px;
 }
 
+.no-top-margin {
+    margin-top: 0px;
+}
+
+.verse-container {
+    position: initial;
+}
+
+.verse-container .category {
+    margin-top: 0px;
+}
+
+.large-bottom-margin {
+    margin-bottom: 150px;
+}
+
+
 .category {
     z-index: 10;
     position: absolute;
@@ -203,12 +220,34 @@
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.19)
 }
 
+.verse-section {
+    vertical-align: top;
+    margin-bottom:60px !important;
+    height: 150px;
+}
+
+.video-section {
+    vertical-align: top;
+    margin-bottom:60px !important;
+}
+
+.testimony-section {
+    vertical-align: top;
+    margin-bottom:60px !important;
+}
+
+.verse-section .uk-container {
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 0 14px 25px rgba(0, 0, 0, .16);
+}
+
 .reference {
     z-index: 10;
     position: absolute;
     color: black;
     padding: 0;
-    margin-top: -16px;
+    margin-top: -20px;
     margin-left: 17px;
     border-radius: 10px;
     padding: 1.5px 8px;
